agr sim, mais coisa

--- a/Breno/If.html
+++ b/Breno/If.html
@@ -27,6 +27,7 @@
     Questão 9 <button onclick="desconto()">Desconto</button> <br>
     Questão 10<button onclick="comparação()">Comparação</button> <br>
     Questão 11<button onclick="bissexto()">Ano</button> <br>
+    IMC <button onclick="imc2()">IMC dnv</button> <br>
     <script src="If.js"></script>
     <script src="script.js"></script>
   </body>
