--- a/Breno/Index.html
+++ b/Breno/Index.html
@@ -14,29 +14,82 @@
         <option value="dark">Escuro</option>
       </select>
     </header>
+
     <h1>Operações matemáticas - Javascript</h1>
+    <br />
+
     <button onclick="somaIdades()">Calcular soma das idades</button> <br />
     <button onclick="media()">Calcular média</button> <br />
     <button onclick="imc()">Calcular IMC</button> <br />
     <button onclick="porcentagem()">Scam</button> <br />
-    <h1>Atividades da Ficha</h1>
+
+    <h1>Atividades da Ficha 1</h1>
+    <br />
+
     Questão 1 <button onclick="soma()">Soma</button> <br />
-    Questão 2 <button onclick="operacoesBasicas()">Operações basicas</button> <br />
+    Questão 2 <button onclick="operacoesBasicas()">Operações basicas</button>
+    <br />
     Questão 3 <button onclick="mamaocomAcucar()">Loja</button> <br />
     Questão 4 <button onclick="areaCirculo()">Área de circulo</button> <br />
     Questão 5 <button onclick="consumoMedio()">Consumo médio</button> <br />
     Questão 6 <button onclick="mediadnv()">Média de notas</button> <br />
     Questão 7 <button onclick="comissao()">Comissão</button> <br />
-    Questão 8 <button onclick="conversao()">Conversão temperatura</button> <br />
+    Questão 8 <button onclick="conversao()">Conversão temperatura</button>
+    <br />
     Questão 9 <button onclick="dolar()">Conversão dólar</button> <br />
-    Questão 10<button onclick="juros()">Juros</button> <br>
-    <h1>Parte 2</h1>
-    <button onclick="qualquercoisa()">Questão 1</button> <br>
-    <button onclick="consumoMedioDnv()">Questão 2</button> <br>
-    <button onclick="conversaoDnv()">Questão 3</button> <br>
-    <button onclick="latasdetinta()">Questão 4</button>
+    Questão 10<button onclick="juros()">Juros</button> <br />
+
+    <h1>Ficha 1 Parte 2</h1>
+    <br />
+
+    <button onclick="qualquercoisa()">Questão 1</button> <br />
+    <button onclick="consumoMedioDnv()">Questão 2</button> <br />
+    <button onclick="conversaoDnv()">Questão 3</button> <br />
+    <button onclick="latasdetinta()">Questão 4</button> <br />
+
+    <h1>Função condicional IF ELSE</h1>
+    <br />
+
+    Questão 1 <button onclick="maioridade()">Idade</button> <br />
+    Questão 2 <button onclick="par()">Pá ou impa</button> <br />
+    Questão 3 <button onclick="vendas()">Vendas</button> <br />
+    Questão 4 <button onclick="plano()">Plano</button> <br />
+    Questão 5
+    <button onclick="classificação()">Classificação de idades</button> <br />
+    Questão 6 <button onclick="resultadofinal()">Resultado final</button> <br />
+    Questão 7 <button onclick="estadoTemp()">Temperatura</button> <br />
+    Questão 8 <button onclick="tarifa()">Estacionamento</button> <br />
+    Questão 9 <button onclick="desconto()">Desconto</button> <br />
+    Questão 10<button onclick="comparação()">Comparação</button> <br />
+    Questão 11<button onclick="bissexto()">Ano</button> <br />
+    IMC <button onclick="imc2()">IMC dnv</button> <br />
+
+    <h1>Switch-case</h1>
+    <br />
+
+    <button onclick="opcao()">Compra</button> <br />
+    <button onclick="opcao2()">Compra2</button> <br />
+    <button onclick="opcao3()">Compra3</button> <br />
+    <button onclick="calculadora()">Calculadora</button> <br />
+    <button onclick="coisas()">O que fazer</button> <br />
+
+    <h1>Do-While</h1>
+    <br />
+
+    <button onclick="sla()">sla</button> <br />
+    <button onclick="contador()">Contadô</button> <br />
+    <button onclick="banco()">Banco</button> <br />
+
+    <h1>BancoJS</h1>
+    <br />
+
+    <button onclick="bancoJS()">BancoJS</button>
+
     <script src="Exercícios.js"></script>
     <script src="Ficha1.js"></script>
-    <script src="script.js"></script>
+    <script src="If.js"></script>
+    <script src="Funções.js"></script>
+    <script src="BancoJS.js"></script>
+    <script src="darkmode.js"></script>
   </body>
 </html>
