--- a/Breno/Index.html
+++ b/Breno/Index.html
@@ -83,13 +83,20 @@
     <h1>BancoJS</h1>
     <br />
 
-    <button onclick="bancoJS()">BancoJS</button>
+    <button onclick="bancoJS()">BancoJS</button> <br />
+    
+    <h1>Joguinho</h1>
+    <br/>
+
+    <button onclick="Jogo()">Jogo</button> <br>
+    <button onclick="Senha()">Senha</button>
 
     <script src="Exercícios.js"></script>
     <script src="Ficha1.js"></script>
     <script src="If.js"></script>
     <script src="Funções.js"></script>
     <script src="BancoJS.js"></script>
+    <script src="Jogo.js"></script>
     <script src="darkmode.js"></script>
   </body>
 </html>
