--- a/Breno/Index.html
+++ b/Breno/Index.html
@@ -89,7 +89,14 @@
     <br/>
 
     <button onclick="Jogo()">Jogo</button> <br>
-    <button onclick="Senha()">Senha</button>
+    <button onclick="Senha()">Senha</button> <br>
+
+    <h1>Length</h1>
+    <br>
+
+    <button onclick="validarNome()">Nome</button> <br>
+    <button onclick="contador()">Contador</button> <br>
+    <button onclick="tabuada()">Tabuada</button> <br>
 
     <script src="Exercícios.js"></script>
     <script src="Ficha1.js"></script>
@@ -97,6 +104,7 @@
     <script src="Funções.js"></script>
     <script src="BancoJS.js"></script>
     <script src="Jogo.js"></script>
+    <script src="length.js"></script>
     <script src="darkmode.js"></script>
   </body>
 </html>
