--- a/Breno/Index.html
+++ b/Breno/Index.html
@@ -84,19 +84,34 @@
     <br />
 
     <button onclick="bancoJS()">BancoJS</button> <br />
-    
-    <h1>Joguinho</h1>
-    <br/>
 
-    <button onclick="Jogo()">Jogo</button> <br>
-    <button onclick="Senha()">Senha</button> <br>
+    <h1>Joguinho</h1>
+    <br />
+
+    <button onclick="Jogo()">Jogo</button> <br />
+    <button onclick="Senha()">Senha</button> <br />
 
     <h1>Length</h1>
-    <br>
+    <br />
 
-    <button onclick="validarNome()">Nome</button> <br>
-    <button onclick="contador()">Contador</button> <br>
-    <button onclick="tabuada()">Tabuada</button> <br>
+    <button onclick="validarNome()">Nome</button> <br />
+
+    <h1>For</h1>
+    <br />
+
+    <button onclick="contador()">Contador</button> <br />
+    <button onclick="tabuada()">Tabuada</button> <br />
+
+    <h1>Métodos</h1>
+    <br />
+
+    <button onclick="listas1()">Lista 1</button> <br />
+    <button onclick="listas2()">Lista 2</button> <br />
+    <button onclick="listas3()">Lista 3</button> <br />
+    <button onclick="listas4()">Lista 4</button> <br />
+    <button onclick="listas5()">Lista 5</button> <br />
+    <button onclick="listas6()">Lista 6</button> <br />
+    <button onclick="listas7()">Lista 7</button> <br />
 
     <script src="Exercícios.js"></script>
     <script src="Ficha1.js"></script>
@@ -105,6 +120,7 @@
     <script src="BancoJS.js"></script>
     <script src="Jogo.js"></script>
     <script src="length.js"></script>
+    <script src="listas.js"></script>
     <script src="darkmode.js"></script>
   </body>
 </html>
