--- a/Breno/Index.html
+++ b/Breno/Index.html
@@ -113,6 +113,18 @@
     <button onclick="listas6()">Lista 6</button> <br />
     <button onclick="listas7()">Lista 7</button> <br />
 
+    <h1>Revisão 30/05</h1>
+    <br>
+
+    <button onclick="mostrarHora()">Mostrar hora</button> <br>
+    <button onclick="numeroAleatorio()">Número aleatorio</button> <br>
+    <button onclick="numeroAleatorio2()">Número Aleatório2</button> <br>
+    <button onclick="raizQuadrada()">Raiz Quadrada</button> <br>
+    <button onclick="raizQuadrada2()">Raiz Quadrada2</button> <br>
+    <button onclick="potencia()">Potência</button> <br>
+    <button onclick="mostrarNomes()">Mostrar Nomes</button> <br>
+    <button onclick="cadastrarPessoas()">Cadastrar Pessoas</button> <br>
+
     <script src="Exercícios.js"></script>
     <script src="Ficha1.js"></script>
     <script src="If.js"></script>
@@ -121,6 +133,7 @@
     <script src="Jogo.js"></script>
     <script src="length.js"></script>
     <script src="listas.js"></script>
+    <script src="Revisão.js"></script>
     <script src="darkmode.js"></script>
   </body>
 </html>
