--- a/Breno/Index.html
+++ b/Breno/Index.html
@@ -114,16 +114,28 @@
     <button onclick="listas7()">Lista 7</button> <br />
 
     <h1>Revisão 30/05</h1>
-    <br>
+    <br />
 
-    <button onclick="mostrarHora()">Mostrar hora</button> <br>
-    <button onclick="numeroAleatorio()">Número aleatorio</button> <br>
-    <button onclick="numeroAleatorio2()">Número Aleatório2</button> <br>
-    <button onclick="raizQuadrada()">Raiz Quadrada</button> <br>
-    <button onclick="raizQuadrada2()">Raiz Quadrada2</button> <br>
-    <button onclick="potencia()">Potência</button> <br>
-    <button onclick="mostrarNomes()">Mostrar Nomes</button> <br>
-    <button onclick="cadastrarPessoas()">Cadastrar Pessoas</button> <br>
+    <button onclick="mostrarHora()">Mostrar hora</button> <br />
+    <button onclick="numeroAleatorio()">Número aleatorio</button> <br />
+    <button onclick="numeroAleatorio2()">Número Aleatório2</button> <br />
+    <button onclick="raizQuadrada()">Raiz Quadrada</button> <br />
+    <button onclick="raizQuadrada2()">Raiz Quadrada2</button> <br />
+    <button onclick="potencia()">Potência</button> <br />
+    <button onclick="mostrarNomes()">Mostrar Nomes</button> <br />
+    <button onclick="cadastrarPessoas()">Cadastrar Pessoas</button> <br />
+    <button onclick="contar()">Contar</button> <br />
+    <button onclick="calculadora()">Calculadora</button> <br />
+    <button onclick="validarSenha()">Validar Senha</button> <br />
+    <button onclick="mediaNotas()">Calcular Média</button> <br />
+
+    <h1>Calculadora de IMC</h1>
+    <br />
+
+    Massa <input type="text" id="massa" /> <br />
+    Altura <input type="text" id="altura" /> <br />
+    <button onclick="imc()">Calcular IMC</button>
+    Resultado <input type="text" id="resultado" />
 
     <script src="Exercícios.js"></script>
     <script src="Ficha1.js"></script>
@@ -134,6 +146,7 @@
     <script src="length.js"></script>
     <script src="listas.js"></script>
     <script src="Revisão.js"></script>
+    <script src="IMCdnv.js"></script>
     <script src="darkmode.js"></script>
   </body>
 </html>
