--- a/Breno/Index.html
+++ b/Breno/Index.html
@@ -135,24 +135,26 @@
     Altura <input type="number" id="altura" placeholder="Ex: 1.70" /> <br />
     <!--cria uma caixa de texto do tipo número para pôr informações, com a Id "altura".-->
 
-    <button onclick="imc()">Calcular IMC</button> <br />
+    <button onclick="imcCal()">Calcular IMC</button> <br />
 
     <!--opção 1-->
     <!--<h2 id="resultado"></h2> <br>-->
 
     <!--opção 2-->
-    Resultado <input type="text" id="resultado" />
+    Resultado <input type="number" id="resultado"> <br>
 
     <h1>Input</h1>
     <br />
 
-    <label for="">Informe o número aqui</label>
-    <!--'label' um input mais personalizável-->
+    <label>Informe o número aqui</label>
     <input type="number" id="numero" />
-    <button onclick="calcularRaiz()"></button>
+    <button onclick="calcularRaiz()">Calcular</button>
     <br />
-    <label for="">Resultado</label>
-    <input type="number" id="resultado" />
+    <label>Resultado</label>
+    <input type="number" id="raiz" /> <br>
+
+    <h1>Fixação</h1>
+    <br>
 
     <script src="Exercícios.js"></script>
     <script src="Ficha1.js"></script>
@@ -164,6 +166,7 @@
     <script src="listas.js"></script>
     <script src="Revisão.js"></script>
     <script src="IMCdnv.js"></script>
+    <script src="Input.js"></script>
     <script src="darkmode.js"></script>
   </body>
 </html>
