--- a/Breno II-Módulo/atividade.html
+++ b/Breno II-Módulo/atividade.html
@@ -29,7 +29,50 @@
         </nav>
       </nav>
     </header>
-    <main></main>
+    <main>
+      <section class="main-section-sobre_nos">
+        <p class="main-section-sobre_nos-texto_cima">Sobre nós</p>
+        <p class="main-section-sobre_nos-texto_meio">
+          Por que somos diferentes?
+        </p>
+        <p class="main-section-sobre_nos-texto_baixo">
+          Nós focamos nos detalhes de tudo que fazemos. Tudo para ajudar as
+          empresas de <br />
+          todo o mundo a se concentrarem naquilo que é realmente importante para
+          elas.
+        </p>
+      </section>
+      <section class="main-section-dados">
+        <div class="main-section-dados-bloco_numero">
+          <p class="main-section-dados-numeros">400+</p>
+            <div class="main-section-dados-bloco_texto">
+              <p class="main-section-dados-texto">Projetos concluídos</p>
+              <p class="main-section-dados-subtexto">Nós ajudamos a construir mais de 400 projetos incríveis.</p>
+            </div>
+        </div>
+        <div class="main-section-dados-bloco_numero">
+          <p class="main-section-dados-numeros">100+</p>
+            <div class="main-section-dados-bloco_texto">
+              <p class="main-section-dados-texto">Colaboradores</p>
+              <p class="main-section-dados-subtexto">Temos mais de 100 colaboradores no nosso time que se preocupam com nossos clientes.</p>
+            </div>
+        </div>
+        <div class="main-section-dados-bloco_numero">
+          <p class="main-section-dados-numeros">20k</p>
+            <div class="main-section-dados-bloco_texto">
+              <p class="main-section-dados-texto">Downloads</p>
+              <p class="main-section-dados-subtexto">Nossos projetos que estão disponíveis em lojas já foram baixados mais de 20.000 vezes.</p>
+            </div>
+        </div>
+        <div class="main-section-dados-bloco_numero">
+          <p class="main-section-dados-numeros">500+</p>
+            <div class="main-section-dados-bloco_texto">
+              <p class="main-section-dados-texto">Reviews 5 estrelas</p>
+              <p class="main-section-dados-subtexto">Estamos orgulhosos de contar com mais de 500 reviews 5 estrelas em nossos produtos.</p>
+            </div>
+        </div>
+      </section>
+    </main>
     <footer></footer>
   </body>
 </html>
