--- a/Breno II-Módulo/atividade.html
+++ b/Breno II-Módulo/atividade.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <link rel="stylesheet" href="style.css" />
+
   </head>
   <body>
     <header>
@@ -45,34 +46,57 @@
       <section class="main-section-dados">
         <div class="main-section-dados-bloco_numero">
           <p class="main-section-dados-numeros">400+</p>
-            <div class="main-section-dados-bloco_texto">
-              <p class="main-section-dados-texto">Projetos concluídos</p>
-              <p class="main-section-dados-subtexto">Nós ajudamos a construir mais de 400 projetos incríveis.</p>
-            </div>
+          <div class="main-section-dados-bloco_texto">
+            <p class="main-section-dados-texto">Projetos concluídos</p>
+            <p class="main-section-dados-subtexto">
+              Nós ajudamos a construir mais de 400 projetos incríveis.
+            </p>
+          </div>
         </div>
         <div class="main-section-dados-bloco_numero">
           <p class="main-section-dados-numeros">100+</p>
-            <div class="main-section-dados-bloco_texto">
-              <p class="main-section-dados-texto">Colaboradores</p>
-              <p class="main-section-dados-subtexto">Temos mais de 100 colaboradores no nosso time que se preocupam com nossos clientes.</p>
-            </div>
+          <div class="main-section-dados-bloco_texto">
+            <p class="main-section-dados-texto">Colaboradores</p>
+            <p class="main-section-dados-subtexto">
+              Temos mais de 100 colaboradores no nosso time que se preocupam com
+              nossos clientes.
+            </p>
+          </div>
         </div>
         <div class="main-section-dados-bloco_numero">
           <p class="main-section-dados-numeros">20k</p>
-            <div class="main-section-dados-bloco_texto">
-              <p class="main-section-dados-texto">Downloads</p>
-              <p class="main-section-dados-subtexto">Nossos projetos que estão disponíveis em lojas já foram baixados mais de 20.000 vezes.</p>
-            </div>
+          <div class="main-section-dados-bloco_texto">
+            <p class="main-section-dados-texto">Downloads</p>
+            <p class="main-section-dados-subtexto">
+              Nossos projetos que estão disponíveis em lojas já foram baixados
+              mais de 20.000 vezes.
+            </p>
+          </div>
         </div>
         <div class="main-section-dados-bloco_numero">
           <p class="main-section-dados-numeros">500+</p>
-            <div class="main-section-dados-bloco_texto">
-              <p class="main-section-dados-texto">Reviews 5 estrelas</p>
-              <p class="main-section-dados-subtexto">Estamos orgulhosos de contar com mais de 500 reviews 5 estrelas em nossos produtos.</p>
-            </div>
+          <div class="main-section-dados-bloco_texto">
+            <p class="main-section-dados-texto">Reviews 5 estrelas</p>
+            <p class="main-section-dados-subtexto">
+              Estamos orgulhosos de contar com mais de 500 reviews 5 estrelas em
+              nossos produtos.
+            </p>
+          </div>
         </div>
       </section>
     </main>
-    <footer></footer>
+    <footer>
+      <div class="footer-div-p">
+        <p class="footer-p-texto">Acompanhe as nossas oportunidades</p>
+        <p class="footer-p-subtexto">
+          Seja o primeiro a saber quando novas vagas serão abertas!
+        </p>
+      </div>
+      <div class="footer-div-input">
+        <input type="text" placeholder="Seu e-mail" />
+        <p class="footer-p-button">Cadastrar</p>
+      </div>
+      <p class="footer-final">© 2022 OptimusTech. Todos os direitos reservados.</p>
+    </footer>
   </body>
 </html>
