Ajeitar tudo conforme o figma

--- a/Recriação Figma/index.html
+++ b/Recriação Figma/index.html
@@ -5,7 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <link rel="stylesheet" href="style.css" />
-
   </head>
   <body>
     <header>
@@ -84,6 +83,22 @@
           </div>
         </div>
       </section>
+      <section class="main-section-vagas">
+        <div class="main-section-vagas-txt_e_img">
+          <div class="main-section-vagas-txt">
+            <div class="main-section-vagas-txt-inicio_e_meio">
+              <p class="main-section-vagas-txt-inicio">Vagas abertas!</p>
+              <p class="main-section-vagas-txt-meio">
+                Estamos procurando por talentos
+              </p>
+            </div>
+            <p class="main-section-vagas-txt-fim">
+              Somos uma equipe 100% remota com pessoas do Brasil inteiro.
+            </p>
+          </div>
+          <img src="pessoas.png" alt="" />
+        </div>
+      </section>
     </main>
     <footer>
       <div class="footer-div-p">
@@ -96,7 +111,9 @@
         <input type="text" placeholder="Seu e-mail" />
         <p class="footer-p-button">Cadastrar</p>
       </div>
-      <p class="footer-final">© 2022 OptimusTech. Todos os direitos reservados.</p>
+      <p class="footer-final">
+        © 2022 OptimusTech. Todos os direitos reservados.
+      </p>
     </footer>
   </body>
 </html>
