--- a/Recriação Figma/index.html
+++ b/Recriação Figma/index.html
@@ -83,22 +83,41 @@
           </div>
         </div>
       </section>
-      <section class="main-section-vagas">
-        <div class="main-section-vagas-txt_e_img">
-          <div class="main-section-vagas-txt">
-            <div class="main-section-vagas-txt-inicio_e_meio">
-              <p class="main-section-vagas-txt-inicio">Vagas abertas!</p>
-              <p class="main-section-vagas-txt-meio">
+      <article class="main-article-vagas">
+        <div class="main-article-vagas-txt_e_img">
+          <div class="main-article-vagas-txt">
+            <div class="main-article-vagas-txt-inicio_e_meio">
+              <p class="main-article-vagas-txt-inicio">Vagas abertas!</p>
+              <p class="main-article-vagas-txt-meio">
                 Estamos procurando por talentos
               </p>
             </div>
-            <p class="main-section-vagas-txt-fim">
+            <p class="main-article-vagas-txt-fim">
               Somos uma equipe 100% remota com pessoas do Brasil inteiro.
             </p>
           </div>
-          <img src="pessoas.png" alt="" />
+          <img src="pessoas.png" alt="" width="1216" height="400"/>
         </div>
-      </section>
+        <div class="main-article-vagas_abertas">
+          <div class="main-article-vagas_design">
+            <p class="main-article-vagas_design-p">Design</p>
+            <div class="main-article-vagas_design-caixa1">
+              <p class="main-article-vagas_design-caixa1-p">Product Designer</p>
+              <div class="main-article-vagas_design-caixa1-detalhes">
+                <p>Full-Time</p>
+                <p>Faixa Salarial: R$7.000</p>
+              </div>
+            </div>
+            <div class="main-article-vagas_design-caixa2">
+              <p class="main-article-vagas_design-caixa2-p">UX Designer</p>
+              <div class="main-article-vagas_design-caixa2-detalhes">
+                <p>Full-time</p>
+                <p>Faixa salarial: R$6.000</p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </article>
     </main>
     <footer>
       <div class="footer-div-p">
