--- a/Recriação Figma/index.html
+++ b/Recriação Figma/index.html
@@ -1,138 +1,179 @@
 <!DOCTYPE html>
 <html lang="pt">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
-    <link rel="stylesheet" href="style.css" />
-  </head>
-  <body>
-    <header>
-      <nav>
-        <nav class="header-nav-logo">
-          <figure>
-            <img src="logo.png" alt="" />
-          </figure>
-          <p>OptimusTech</p>
-        </nav>
 
-        <nav class="header-nav-links">
-          <p>Home</p>
-          <p>Produtos</p>
-          <p>Recursos</p>
-          <p>Sobre nós</p>
-        </nav>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Document</title>
+  <link rel="stylesheet" href="style.css" />
+</head>
 
-        <nav class="header-nav-cadastro">
-          <p>Entrar</p>
-          <p class="header-nav-botao_cadastrar">Cadastrar</p>
-        </nav>
+<body>
+  <header>
+    <nav>
+      <nav class="header-nav-logo">
+        <figure>
+          <img src="logo.png" alt="" />
+        </figure>
+        <p>OptimusTech</p>
       </nav>
-    </header>
-    <main>
-      <section class="main-section-sobre_nos">
-        <p class="main-section-sobre_nos-texto_cima">Sobre nós</p>
-        <p class="main-section-sobre_nos-texto_meio">
-          Por que somos diferentes?
-        </p>
-        <p class="main-section-sobre_nos-texto_baixo">
-          Nós focamos nos detalhes de tudo que fazemos. Tudo para ajudar as
-          empresas de <br />
-          todo o mundo a se concentrarem naquilo que é realmente importante para
-          elas.
-        </p>
-      </section>
-      <section class="main-section-dados">
-        <div class="main-section-dados-bloco_numero">
-          <p class="main-section-dados-numeros">400+</p>
-          <div class="main-section-dados-bloco_texto">
-            <p class="main-section-dados-texto">Projetos concluídos</p>
-            <p class="main-section-dados-subtexto">
-              Nós ajudamos a construir mais de 400 projetos incríveis.
-            </p>
-          </div>
-        </div>
-        <div class="main-section-dados-bloco_numero">
-          <p class="main-section-dados-numeros">100+</p>
-          <div class="main-section-dados-bloco_texto">
-            <p class="main-section-dados-texto">Colaboradores</p>
-            <p class="main-section-dados-subtexto">
-              Temos mais de 100 colaboradores no nosso time que se preocupam com
-              nossos clientes.
-            </p>
-          </div>
-        </div>
-        <div class="main-section-dados-bloco_numero">
-          <p class="main-section-dados-numeros">20k</p>
-          <div class="main-section-dados-bloco_texto">
-            <p class="main-section-dados-texto">Downloads</p>
-            <p class="main-section-dados-subtexto">
-              Nossos projetos que estão disponíveis em lojas já foram baixados
-              mais de 20.000 vezes.
-            </p>
-          </div>
-        </div>
-        <div class="main-section-dados-bloco_numero">
-          <p class="main-section-dados-numeros">500+</p>
-          <div class="main-section-dados-bloco_texto">
-            <p class="main-section-dados-texto">Reviews 5 estrelas</p>
-            <p class="main-section-dados-subtexto">
-              Estamos orgulhosos de contar com mais de 500 reviews 5 estrelas em
-              nossos produtos.
-            </p>
-          </div>
-        </div>
-      </section>
-      <article class="main-article-vagas">
-        <div class="main-article-vagas-txt_e_img">
-          <div class="main-article-vagas-txt">
-            <div class="main-article-vagas-txt-inicio_e_meio">
-              <p class="main-article-vagas-txt-inicio">Vagas abertas!</p>
-              <p class="main-article-vagas-txt-meio">
-                Estamos procurando por talentos
-              </p>
-            </div>
-            <p class="main-article-vagas-txt-fim">
-              Somos uma equipe 100% remota com pessoas do Brasil inteiro.
-            </p>
-          </div>
-          <img src="pessoas.png" alt="" width="1216" height="400"/>
-        </div>
-        <div class="main-article-vagas_abertas">
-          <div class="main-article-vagas_design">
-            <p class="main-article-vagas_design-p">Design</p>
-            <div class="main-article-vagas_design-caixa1">
-              <p class="main-article-vagas_design-caixa1-p">Product Designer</p>
-              <div class="main-article-vagas_design-caixa1-detalhes">
-                <p>Full-Time</p>
-                <p>Faixa Salarial: R$7.000</p>
-              </div>
-            </div>
-            <div class="main-article-vagas_design-caixa2">
-              <p class="main-article-vagas_design-caixa2-p">UX Designer</p>
-              <div class="main-article-vagas_design-caixa2-detalhes">
-                <p>Full-time</p>
-                <p>Faixa salarial: R$6.000</p>
-              </div>
-            </div>
-          </div>
-        </div>
-      </article>
-    </main>
-    <footer>
-      <div class="footer-div-p">
-        <p class="footer-p-texto">Acompanhe as nossas oportunidades</p>
-        <p class="footer-p-subtexto">
-          Seja o primeiro a saber quando novas vagas serão abertas!
-        </p>
-      </div>
-      <div class="footer-div-input">
-        <input type="text" placeholder="Seu e-mail" />
-        <p class="footer-p-button">Cadastrar</p>
-      </div>
-      <p class="footer-final">
-        © 2022 OptimusTech. Todos os direitos reservados.
+
+      <nav class="header-nav-links">
+        <p>Home</p>
+        <p>Produtos</p>
+        <p>Recursos</p>
+        <p>Sobre nós</p>
+      </nav>
+
+      <nav class="header-nav-cadastro">
+        <p>Entrar</p>
+        <p class="header-nav-botao_cadastrar">Cadastrar</p>
+      </nav>
+    </nav>
+  </header>
+  <main>
+    <section class="main-section-sobre_nos">
+      <p class="main-section-sobre_nos-texto_cima">Sobre nós</p>
+      <p class="main-section-sobre_nos-texto_meio">
+        Por que somos diferentes?
       </p>
-    </footer>
-  </body>
+      <p class="main-section-sobre_nos-texto_baixo">
+        Nós focamos nos detalhes de tudo que fazemos. Tudo para ajudar as
+        empresas de <br />
+        todo o mundo a se concentrarem naquilo que é realmente importante para
+        elas.
+      </p>
+    </section>
+    <section class="main-section-dados">
+      <div class="main-section-dados-bloco_numero">
+        <p class="main-section-dados-numeros">400+</p>
+        <div class="main-section-dados-bloco_texto">
+          <p class="main-section-dados-texto">Projetos concluídos</p>
+          <p class="main-section-dados-subtexto">
+            Nós ajudamos a construir mais de 400 projetos incríveis.
+          </p>
+        </div>
+      </div>
+      <div class="main-section-dados-bloco_numero">
+        <p class="main-section-dados-numeros">100+</p>
+        <div class="main-section-dados-bloco_texto">
+          <p class="main-section-dados-texto">Colaboradores</p>
+          <p class="main-section-dados-subtexto">
+            Temos mais de 100 colaboradores no nosso time que se preocupam com
+            nossos clientes.
+          </p>
+        </div>
+      </div>
+      <div class="main-section-dados-bloco_numero">
+        <p class="main-section-dados-numeros">20k</p>
+        <div class="main-section-dados-bloco_texto">
+          <p class="main-section-dados-texto">Downloads</p>
+          <p class="main-section-dados-subtexto">
+            Nossos projetos que estão disponíveis em lojas já foram baixados
+            mais de 20.000 vezes.
+          </p>
+        </div>
+      </div>
+      <div class="main-section-dados-bloco_numero">
+        <p class="main-section-dados-numeros">500+</p>
+        <div class="main-section-dados-bloco_texto">
+          <p class="main-section-dados-texto">Reviews 5 estrelas</p>
+          <p class="main-section-dados-subtexto">
+            Estamos orgulhosos de contar com mais de 500 reviews 5 estrelas em
+            nossos produtos.
+          </p>
+        </div>
+      </div>
+    </section>
+    <article class="main-article-vagas">
+      <div class="main-article-vagas-txt_e_img">
+        <div class="main-article-vagas-txt">
+          <div class="main-article-vagas-txt-inicio_e_meio">
+            <p class="main-article-vagas-txt-inicio">Vagas abertas!</p>
+            <p class="main-article-vagas-txt-meio">
+              Estamos procurando por talentos
+            </p>
+          </div>
+          <p class="main-article-vagas-txt-fim">
+            Somos uma equipe 100% remota com pessoas do Brasil inteiro.
+          </p>
+        </div>
+        <img src="pessoas.png" alt="" width="1216" height="400" />
+      </div>
+      <div class="main-article-vagas_abertas">
+        <div class="main-article-vagas_design">
+          <p class="main-article-vagas_design-p">Design</p>
+          <div class="main-article-vagas_design-caixa1">
+            <p class="main-article-vagas_design-caixa1-p">Product Designer</p>
+            <div class="main-article-vagas_design-caixa1-detalhes">
+              <p>Full-Time</p>
+              <p>Faixa Salarial: R$7.000</p>
+            </div>
+          </div>
+          <div class="main-article-vagas_design-caixa2">
+            <p class="main-article-vagas_design-caixa2-p">UX Designer</p>
+            <div class="main-article-vagas_design-caixa2-detalhes">
+              <p>Full-time</p>
+              <p>Faixa salarial: R$6.000</p>
+            </div>
+          </div>
+        </div>
+        <div class="main-article-vagas_dev_software">
+          <p class="main-article-vagas_dev_software-p">Desenvolvimento de Software</p>
+          <div class="main-article-vagas_dev_software-caixa1">
+            <p class="main-article-vagas_dev_software-caixa1-p">Desenvolvedor(a) iOS</p>
+            <div class="main-article-vagas_dev_software-caixa1-detalhes">
+              <p>Full-Time</p>
+              <p>Faixa Salarial: R$8.000</p>
+            </div>
+          </div>
+          <div class="main-article-vagas_dev_software-caixa2">
+            <p class="main-article-vagas_dev_software-caixa2-p">Desenvolvedor(a) Front-end</p>
+            <div class="main-article-vagas_dev_software-caixa2-detalhes">
+              <p>Full-time</p>
+              <p>Faixa salarial: R$7.000</p>
+            </div>
+          </div>
+          <div class="main-article-vagas_dev_software-caixa3">
+            <p class="main-article-vagas_dev_software-caixa3-p">Desenvolvedor(a) Back-end</p>
+            <div class="main-article-vagas_dev_software-caixa3-detalhes">
+              <p>Full-time</p>
+              <p>Faixa salarial: R$8.000</p>
+            </div>
+          </div>
+        </div>
+    </article>
+    <article class="main-article-depoimentos">
+      <div class="main-article-depoimentos-caixa">
+        <div class="main-article-depoimentos-caixa1-txt_subtxt">
+          <p class="main-article-depoimentos-caixa1-txt">Veja o que nossos colaboradores falam sobre nós</p>
+          <p class="main-article-depoimentos-caixa1-subtxt">OptimusTech se importa com a saúde dos seus colaboradores e sempre procura nos dar todo tipo de auxílio possível.</p>
+        </div>
+        <div class="main-article-depoimentos-caixa2">
+          <img src="Avatar.png" alt="" width="56">
+          <div>
+            <p class="main-article-depoimentos-caixa2-txt">Júlia Castro</p>
+            <p class="main-article-depoimentos-caixa2-subtxt">Desenvolvedora Web</p>
+          </div>
+        </div>
+      </div>
+    </article>
+  </main>
+  <footer>
+    <div class="footer-div-p">
+      <p class="footer-p-texto">Acompanhe as nossas oportunidades</p>
+      <p class="footer-p-subtexto">
+        Seja o primeiro a saber quando novas vagas serão abertas!
+      </p>
+    </div>
+    <div class="footer-div-input">
+      <input type="text" placeholder="Seu e-mail" />
+      <p class="footer-p-button">Cadastrar</p>
+    </div>
+    <p class="footer-final">
+      © 2022 OptimusTech. Todos os direitos reservados.
+    </p>
+  </footer>
+</body>
+
 </html>
